force-app/main/default/objects/Course__c/fields/ActiveModules__c.field-meta.xml
<CustomField>
    <fullName>ActiveModules__c</fullName>
    <label>Active Modules</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>