force-app/main/default/objects/Course__c/fields/ExternalURL__c.field-meta.xml
<CustomField>
    <fullName>ExternalURL__c</fullName>
    <label>External URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>