force-app/main/default/objects/Course__c/fields/KeyDependencies__c.field-meta.xml
<CustomField>
    <fullName>KeyDependencies__c</fullName>
    <label>Key Dependencies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>