force-app/main/default/objects/Course__c/fields/SubscriptionMode__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionMode__c</fullName>
    <inlineHelpText>Choose &quot;Manual&quot; to require members to join a course before participating, or &quot;Automatic&quot; to allow members to jump right into taking modules.</inlineHelpText>
    <label>Subscription Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>