force-app/main/default/objects/Course__c/validationRules/CourseNameNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseNameNotBlank</fullName>
    <active>true</active>
    <description>Course name field needs to be complete.</description>
    <errorConditionFormula>ISBLANK( Name )|| ISNULL(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You must enter the Name of the Course</errorMessage>
</ValidationRule>