force-app/main/default/objects/Course__c/validationRules/CourseProgram.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseProgram</fullName>
    <active>true</active>
    <description>Forces the user to choose a program in the Course object.</description>
    <errorConditionFormula>ISBLANK(Program__c)||  ISNULL(Program__c)</errorConditionFormula>
    <errorDisplayField>Program__c</errorDisplayField>
    <errorMessage>You must select a Program</errorMessage>
</ValidationRule>