force-app/main/default/objects/Course__c/validationRules/CourseProgramCannotEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseProgramCannotEdit</fullName>
    <active>true</active>
    <description>Cannot change the program from the course.</description>
    <errorConditionFormula>ISCHANGED( Program__c )</errorConditionFormula>
    <errorDisplayField>Program__c</errorDisplayField>
    <errorMessage>Cannot change the program from the course.</errorMessage>
</ValidationRule>