force-app/main/default/objects/Course__c/validationRules/CourseValidateModule.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseValidateModule</fullName>
    <active>true</active>
    <description>Course need at least one Active Module if is Active.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;
(
(NOT(ISPICKVAL( PRIORVALUE(Status__c) , &quot;Active&quot;)) &amp;&amp;
ISPICKVAL( Status__c , &quot;Active&quot;)) ||
(NOT(ISPICKVAL( PRIORVALUE(Status__c) , &quot;Scheduled&quot;)) &amp;&amp;
ISPICKVAL( Status__c , &quot;Scheduled&quot;)) ||
(NOT(ISPICKVAL( PRIORVALUE(Status__c) , &quot;Completed&quot;)) &amp;&amp;
ISPICKVAL( Status__c , &quot;Completed&quot;))
) &amp;&amp; ActiveModules__c &lt; 1</errorConditionFormula>
    <errorDisplayField>ActiveModules__c</errorDisplayField>
    <errorMessage>To activate a course, it must have at least one active related module.</errorMessage>
</ValidationRule>