force-app/main/default/objects/Course__c/validationRules/SameProgramSegment.validationRule-meta.xml
<ValidationRule>
    <fullName>SameProgramSegment</fullName>
    <active>true</active>
    <description>The course must have a segment within the same program.</description>
    <errorConditionFormula>Segment__r.FieloPLT__Program__c  &lt;&gt;  Program__c &amp;&amp;  NOT(ISNULL(Segment__r.FieloPLT__Program__c) ||  ISBLANK(Segment__r.FieloPLT__Program__c))</errorConditionFormula>
    <errorDisplayField>Segment__c</errorDisplayField>
    <errorMessage>Segment must be on the same program.</errorMessage>
</ValidationRule>