force-app/main/default/objects/Course__c/validationRules/StartDateEndDateGreaterToday.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateEndDateGreaterToday</fullName>
    <active>false</active>
    <description>Start Date and End Date should be greater than Today date</description>
    <errorConditionFormula>OR(ISNEW(), NOT(ISNEW()) &amp;&amp; (ISCHANGED(StartDate__c) || ISCHANGED(EndDate__c))) &amp;&amp; 

AND(NOT(StartDate__c &gt;=  TODAY()) || AND(NOT( EndDate__c &gt;=  TODAY())))</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>Start Date and End Date must be equal or greater than today date.</errorMessage>
</ValidationRule>