force-app/main/default/objects/Course__c/validationRules/StartDateNotGreaterThanEnd.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateNotGreaterThanEnd</fullName>
    <active>true</active>
    <description>Start Date cannot be greater than End Date</description>
    <errorConditionFormula>OR(ISNEW(), NOT(ISNEW()) &amp;&amp; (ISCHANGED(StartDate__c) || ISCHANGED(EndDate__c))) &amp;&amp;

AND(!ISNULL( StartDate__c ), !ISNULL( EndDate__c )) &amp;&amp;  StartDate__c  &gt;  EndDate__c</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>Start Date cannot be greater than End Date</errorMessage>
</ValidationRule>